--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         .hero-section {
             position: relative;
             height: 100vh;
-            background: url('image/4.jpg') center/cover no-repeat; /* 4.jpg arka plan oldu */
+            background: url('4.jpg') center/cover no-repeat; /* 4.jpg arka plan oldu */
             display: flex;
             align-items: center;
             justify-content: center;
@@ -115,7 +115,7 @@
     <style>
     /* ... Diğer stiller aynı ... */
     .hero-section {
-        background: url('image/3.jpg') center/cover no-repeat;
+        background: url('3.jpg') center/cover no-repeat;
         background-size: cover;
         -webkit-background-size: cover;
         background-attachment: scroll;
@@ -177,3 +177,4 @@
     </footer>
 </body>
 </html>
+
