--- a/cv2.html
+++ b/cv2.html
@@ -17,7 +17,7 @@
         /* ARKA PLAN */
         .hero-section {
             height: 100vh;
-            background: url('image/3.jpg') center/cover no-repeat fixed;
+            background: url('3.jpg') center/cover no-repeat fixed;
             position: relative;
         }
         .hero-overlay {
@@ -196,4 +196,5 @@
         };
     </script>
 </body>
+
 </html>
