--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             
             <!-- BUTONLAR -->
             <div class="button-container">
-                <a href="https://linkedin.com/in/elif-yavuz" target="_blank">
+                <a href="https://www.linkedin.com/in/elif-yavuz-60b4a6342/" target="_blank">
                     <button class="btn">LinkedIn</button>
                 </a>
                 <a href="https://github.com/V4L3RINA" target="_blank">
@@ -177,4 +177,5 @@
     </footer>
 </body>
 </html>
+
 
